# soundman

./: .gitattributes  .gitignore  README.md
.claude/: settings.local.json
desktop-app/: .gitignore  CMakeLists.txt  README.md
desktop-app/Source/: Main.cpp
desktop-app/Source/Core/: AudioEngine.cpp  AudioEngine.h  EffectChain.cpp  EffectChain.h  MultiTrackAudioSource.cpp  MultiTrackAudioSource.h  PluginManager.cpp  PluginManager.h  ProjectManager.cpp  ProjectManager.h  ProjectModel.cpp  ProjectModel.h
desktop-app/Source/DSP/: AudioFilter.cpp  AudioFilter.h  BPMDetector.cpp  BPMDetector.h  HarmonicsAnalyzer.cpp  HarmonicsAnalyzer.h  ImpulseResponseAnalyzer.cpp  ImpulseResponseAnalyzer.h  KeyDetector.cpp  KeyDetector.h  MFCCAnalyzer.cpp  MFCCAnalyzer.h  PitchDetector.cpp  PitchDetector.h  SignalGenerator.cpp  SignalGenerator.h  THDAnalyzer.cpp  THDAnalyzer.h
desktop-app/Source/UI/: ABCompareControl.cpp  ABCompareControl.h  AnalysisPanel.cpp  AnalysisPanel.h  AudioTimeline.cpp  AudioTimeline.h  BPMDisplay.cpp  BPMDisplay.h  CompareWaveformDisplay.cpp  CompareWaveformDisplay.h  DeviceControlPanel.cpp  DeviceControlPanel.h  FileInfoPanel.cpp  FileInfoPanel.h  FilterPanel.cpp  FilterPanel.h  GeneratorPanel.cpp  GeneratorPanel.h  HarmonicsDisplay.cpp  HarmonicsDisplay.h  HistogramDisplay.cpp  HistogramDisplay.h  KeyDisplay.cpp  KeyDisplay.h  KeyboardHandler.cpp  KeyboardHandler.h  LevelMeter.cpp  LevelMeter.h  LoudnessMeter.cpp  LoudnessMeter.h  MFCCDisplay.cpp  MFCCDisplay.h  MarkerPanel.cpp  MarkerPanel.h  MasterGainControl.cpp  MasterGainControl.h  MetersPanel.cpp  MetersPanel.h  MixerPanel.cpp  MixerPanel.h  (+44 more)
desktop-app/Source/Utils/: DataExporter.cpp  DataExporter.h
docs/: ARCHITECTURE.md  FEATURES.md  PROJECT_STRUCTURE.md  ROADMAP.md
shared/schemas/: README.md  library-schema.json  project-schema.json
test-audio/: generate_test_sounds.py
test-audio/output/: README.md
web-app/: .gitignore  README.md  index.html  package.json  vite.config.ts
web-app/src/: App.vue
web-app/src/assets/styles/: main.css
web-app/src/router/: index.ts
web-app/src/views/: HomeView.vue
